--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.5",
+    "axios": "^0.24.0",
     "formik": "^2.2.9",
     "next": "12.0.1",
     "react": "17.0.2",
