--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.5",
     "axios": "^0.24.0",
+    "date-fns": "^2.26.0",
     "formik": "^2.2.9",
     "next": "12.0.1",
     "react": "17.0.2",
